# luoyangchan

./: .env.example  .gitignore  CLAUDE.md  IDEA.md  PLAN.md  README.md  package-lock.json  package.json
scripts/: apply_name_corrections.py  fetch_coordinates.py  find_encoding_issues.py  geocode_amap.py  list_missing_coords.py  pyproject.toml  reconcile_data.py  regeocode_by_name.py  scrape_wikipedia.py  scrape_wikisource.py  seed_supabase.py
scripts/db/: seed_heritage_sites.py  seed_supabase.py  update_heritage_sites.py
scripts/round1/: fetch_coordinates.py  geocode_amap.py  list_missing_coords.py  reconcile_data.py  scrape_wikipedia.py  scrape_wikisource.py
scripts/round2/: apply_name_corrections.py  find_encoding_issues.py  regeocode_by_name.py
scripts/round3/: analyze_data_quality.py  apply_manual_corrections.py  apply_multi_address_split.py  batch_geocode_helper.py  deepseek_geocode.py  generate_gemini_prompt_geocode.py  generate_gemini_prompt_multi_address.py  geocode_multi_address.py  geocode_tencent.py  geocode_utils.py  llm_geocode.py  update_fallback_list.py  verify_round3.py
scripts/round4/: audit_duplicate_coords.py  audit_vague_addresses.py  baike_address_refine.py  fill_parent_centroids.py  fix_duplicate_coords.py  fix_geocode_method_label.py  fix_single.py  normalize_address.py  resolve_duplicate_coords.py  search_refine_geocode.py  split_chamagudao.py
scripts/round5/: apply_enrichment.py  audit_enrichment.py  enrich_descriptions.py  fetch_baike.py  fetch_wikipedia.py  fix_baike.py  fix_baike_ddg.py  fix_wikipedia.py  fix_wikipedia_full.py  (+1 more)
(+147 files in other folders)
