[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "coordtransform>=0.2.1",
    "ddgs>=9.11.4",
    "openai>=2.29.0",
    "playwright>=1.40",
    "requests>=2.32.5",
    "zhconv>=1.4.3",
]
